Fixed modal hierarchy tree height overflow.

--- a/web/interface/themes/ndl/css/default.css
+++ b/web/interface/themes/ndl/css/default.css
@@ -5468,6 +5468,7 @@ div#closeContextHelp:active {
 #modalDialog #hierarchyTree {
     max-height:600px;
     margin-right: 20px;
+    overflow:scroll;
 }
 
 #hierarchyTree .openPath > a {
